--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="assets/styles/style.css" />
 
+    <!-- JQuery script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <title>Creative Ins. | Create Your Skill</title>
   </head>
   <body>
@@ -73,7 +76,7 @@
                 <h5 class="card-title fw-bold">Graphic Design</h5>
                 <h6 class="card-title">Rp. 100.000,00</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-outline-warning">Pesan</a>
+                <a href="#" class="btn btn-outline-warning btnPacket1" data-bs-toggle="modal" data-bs-target="#orderPacket">Pesan</a>
               </div>
             </div>
           </div>
@@ -87,7 +90,7 @@
                 <h5 class="card-title fw-bold">Video Editing</h5>
                 <h6 class="card-title">Rp. 100.000,00</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-outline-warning">Pesan</a>
+                <a href="#" class="btn btn-outline-warning btnPacket2" data-bs-toggle="modal" data-bs-target="#orderPacket">Pesan</a>
               </div>
             </div>
           </div>
@@ -101,7 +104,7 @@
                 <h5 class="card-title fw-bold">Copywriting</h5>
                 <h6 class="card-title">Rp. 100.000,00</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-outline-warning">Pesan</a>
+                <a href="#" class="btn btn-outline-warning btnPacket3" data-bs-target="#orderPacket" data-bs-toggle="modal">Pesan</a>
               </div>
             </div>
           </div>
@@ -115,7 +118,7 @@
                 <h5 class="card-title fw-bold">Microsoft Office</h5>
                 <h6 class="card-title">Rp. 100.000,00</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-outline-warning">Pesan</a>
+                <a href="#" class="btn btn-outline-warning btnPacket4" data-bs-toggle="modal" data-bs-target="#orderPacket">Pesan</a>
               </div>
             </div>
           </div>
@@ -126,27 +129,14 @@
     <!-- end Card Daftar Paket -->
 
     <!-- modal -->
-    <div class="modal" id="cariTicket" tabindex="-1">
+    <div class="modal fade" id="orderPacket" tabindex="-1">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title">Form Registration</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body">
-            <div class="form-floating mb-3">
-              <input type="text" class="form-control" id="floatingInput" placeholder="Nama Lengkap" />
-              <label for="floatingInput">Nama Lengkap</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="text" class="form-control" id="floatingPassword" placeholder="Alamat" />
-              <label for="floatingInput">Alamat</label>
-            </div>
-            <div class="form-floating mb-3">
-              <input type="text" class="form-control" id="floatingInput" placeholder="No. Telepon/WhatsApp" />
-              <label for="floatingInput">No. Telepon/WhatsApp</label>
-            </div>
-          </div>
+          <div class="modal-body"></div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary">Pesan</button>
@@ -178,12 +168,6 @@
               <h5>KENYAMANAN DAN KEAMANAN ADALAH PRIORITAS KAMI</h5>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis vitae labore illum vel, cupiditate doloremque.</p>
             </div>
-            <!-- <div class="card">
-              <div class="card-body">
-                <h5 class="card-title fw-bold text-center">KENYAMANAN DAN KEAMANAN ADALAH PRIORITAS KAMI</h5>
-                <p class="card-text">Kabin yang bersih, fasilitas yang steril, serta keamanan menjadi perhatian kami untuk menemani perjalanan anda.</p>
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
@@ -194,18 +178,18 @@
     <section class="py-4 my-2">
       <div class="container">
         <h3 class="text-center pt-5 pb-4">Events</h3>
-        <div class="card w-75 mx-auto">
+        <div class="card mx-auto w-75">
           <div class="card-body">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="assets/img/theme-photos-CGpifH3FjOA-unsplash.jpg" class="d-block w-100" alt="..." />
+                  <img src="assets/img/workshop-battle-app-graphic-designer.jpg" class="d-block w-100" alt="..." />
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/spartan-xozz-u4bvBOOpZB4-unsplash.jpg" class="d-block w-100" alt="..." />
+                  <img src="assets/img/webinar-bersama-fardiyandi.jpg" class="d-block w-100" alt="..." />
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg" class="d-block w-100" alt="..." />
+                  <img src="assets/img/webinar-muslimah-skill-up.jpg" class="d-block w-100" alt="..." />
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
