--- a/index.html
+++ b/index.html
@@ -247,7 +247,14 @@
     <!-- end main -->
 
     <footer>
-      <p class="fw-bold text-center">Haha Dev &#169; 2021, Moh. Iqbal Baihaqi</p>
+      <div class="foot-title text-center">
+        <h5>Alamat Kantor</h5>
+      </div>
+      <div class="foot-body text-center">
+        <h6>Jl. Ra Kartini No. 41</h6>
+        <h6>Palu - Sulawesi Tengah, Indonesia</h6>
+        <p class="fw-bold pt-1">Haha Dev Collaboration &#169; 2021, Creative Ins.</p>
+      </div>
     </footer>
 
     <!-- Bootstrap Bundle with Popper -->
