Perbaikan padding Event

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!-- end Penjelasan Benefit -->
 
     <!-- Event -->
-    <section class="py-4 my-2">
+    <section class="pt-2 pb-4 mb-2">
       <div class="container">
         <h3 class="text-center pt-5 pb-4">Events</h3>
         <div class="card mx-auto w-75">
