--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
           <div class="col-sm-4 mb-2">
             <div class="benefit text-center p-3 rounded-3">
               <h5>PENDAFTARAN YANG MUDAH DAN CEPAT</h5>
-              <p>Proses pendaftaran kursus online yang mudah, dan didukung oleh pemesanan melalui website resmi Creative Ins.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsam sit voluptatum! A, nisi dolores.</p>
             </div>
           </div>
           <div class="col-sm-4 mb-2">
             <div class="benefit text-center p-3 rounded-3">
               <h5>MENTOR YANG BERPENGALAMAN DAN RAMAH</h5>
-              <p>Mentor yang berpengalaman, serta pelayanan yang baik dan keramahan mentor disetiap pertemuan, akan menemani anda sepanjang perjalanan.</p>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium, a incidunt. Laboriosam repudiandae officiis esse!</p>
             </div>
           </div>
           <div class="col-sm-4 mb-2">
