send Data to PHP server

--- a/index.html
+++ b/index.html
@@ -136,11 +136,15 @@
             <h5 class="modal-title">Form Registration</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body"></div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Pesan</button>
-          </div>
+          <!-- Form -->
+          <form action="send_Data.php" method="POST">
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Pesan</button>
+            </div>
+          </form>
+          <!-- end form -->
         </div>
       </div>
     </div>
@@ -151,22 +155,22 @@
       <div class="container">
         <h3 class="text-center">Mengapa Harus Menggunakan Layanan Creative Ins.</h3>
         <div class="row m-5">
-          <div class="col mb-2">
+          <div class="col-md-4 mb-2">
             <div class="benefit text-center p-3 rounded-3">
               <h5>PENDAFTARAN YANG MUDAH DAN CEPAT</h5>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsam sit voluptatum! A, nisi dolores.</p>
+              <p class="benefit-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum rerum totam tempore quia. Officiis ducimus repellat distinctio tempore nulla similique.</p>
             </div>
           </div>
-          <div class="col mb-2">
+          <div class="col-md-4 mb-2">
             <div class="benefit text-center p-3 rounded-3">
               <h5>MENTOR YANG BERPENGALAMAN DAN RAMAH</h5>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium, a incidunt. Laboriosam repudiandae officiis esse!</p>
+              <p class="benefit-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium, a incidunt. Laboriosam repudiandae officiis esse!</p>
             </div>
           </div>
-          <div class="col mb-2">
+          <div class="col-md-4 mb-2">
             <div class="benefit text-center p-3 rounded-3">
               <h5>KENYAMANAN DAN KEAMANAN ADALAH PRIORITAS KAMI</h5>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis vitae labore illum vel, cupiditate doloremque.</p>
+              <p class="benefit-content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis vitae labore illum vel, cupiditate doloremque.</p>
             </div>
           </div>
         </div>
