--- a/about.html
+++ b/about.html
@@ -35,7 +35,10 @@
                 <a class="nav-link active" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Privacy Policy</a>
+                <a class="nav-link" href="index.html#packet">E-Course</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Webinar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
@@ -45,49 +48,68 @@
         </div>
       </nav>
       <!-- end Navbar -->
-
-      <!-- Jumbotron  -->
-      <!-- style="background-image: url('assets/img/christina-wocintechchat-com-LQ1t-8Ms5PY-unsplash.jpg'); height: 100vh" -->
-      <div class="jumbotron">
-        <img src="assets/img/leon-Oalh2MojUuk-unsplash.jpg" alt="course" class="bannerAbout" />
-        <div class="mask d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.6); height: 75vh; width: 100%">
-          <!-- <div class="content text-center text-white">
-            <img src="assets/img/Jumbotron_Logo.png" alt="logo" height="200vh" width="75%" />
-            <p>Merupakan Platform Penyedia Layanan E-Course</p>
-          </div> -->
-        </div>
-      </div>
-      <!-- end Jumbotron -->
     </header>
 
     <main>
-      <div class="container">
-        <div class="logoContent text-center py-2">
+      <div class="container mt-5 pt-5">
+        <div class="logoContent text-center pb-3">
           <img src="assets/img/logocreativeins3_transparant.png" alt="creative-ins-logo" class="imgAbout" width="30%" />
         </div>
         <div class="contentProfil pb-3">
+          <p>Creative Ins adalah Tempat Kursus secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office).</p>
+          <div class="containerTujuan">
+
+            <p>
+              Tujuan didirikan agar mencetak lulusan yang :
+              <ul style="list-style-type: circle;">
+                <li>memiliki keahlian Desain Grafis/Editor Video/Copywriter/Administrasi Perkantoran </li>
+                <li>memiliki kreatifitas dan kualitas </li>
+                <li>mampu memanfaatkan teknologi untuk berkembang</li>
+                <li>alumninya bisa berpenghasilan sendiri sebagai freelancer atau buka jasa sesuai keahliannya.
+                </li>
+              </ul>
+            </p>
+          </div>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias vitae tempora quo ab excepturi? Est fugiat voluptate consequuntur sit deleniti repudiandae veritatis facilis earum facere sint pariatur eligendi officia doloremque
-            vitae unde amet iste architecto quasi rerum adipisci autem, accusamus sunt iure? Illum, consequatur iure molestiae, doloribus sapiente possimus explicabo quos rem distinctio perspiciatis natus totam, maxime sed nesciunt.
-            Cupiditate mollitia eum itaque enim exercitationem in pariatur vero. Laudantium repellat saepe accusantium maxime, dolor magnam cum, iusto dolorem esse vero ratione voluptas doloribus asperiores. Earum doloremque, dignissimos
-            possimus, pariatur exercitationem repellat officiis deleniti aut similique itaque laboriosam, quod obcaecati accusamus.
+            Creative Ins didirikan oleh Anjani Abbas (Founder Creative Ins) dan Nur Aisyah (Co-Founder) yang pernah mengenyam pendidikan di Teknologi Informasi UNTAD Palu dan berjuang bersama tim militan yang siap tempur dari medan perang
+            masing-masing, Farachatus Salwa (Bali), Princessa Arima (Malang), Octavia (Bengkulu), dan UnName (Palu). <br>
           </p>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas totam quia assumenda harum saepe consequuntur, itaque perferendis voluptatibus, sapiente quos ex tenetur doloremque fuga explicabo odio culpa. Explicabo tenetur
-            rerum ipsum corporis consectetur animi recusandae nihil reprehenderit est non facilis obcaecati eligendi vitae, nemo nam asperiores sunt? Suscipit, maiores harum?
-          </p>
+          <div class="quote text-center fw-bold py-4 my-3">
+            <p>" Yang terpenting bukanlah siapanya atau privillage-nya, yang terpenting adalah kebersamaan buat perubahan lewat keahlian " <br />- Tim Creative Ins -</p>
+          </div>
         </div>
       </div>
     </main>
 
     <footer>
       <div class="foot-title text-center">
-        <h5>Alamat Kantor</h5>
+        <h5>CREATIVE INS</h5>
       </div>
-      <div class="foot-body text-center">
+      <div class="foot-content text-center">
         <h6>Jl. Ra Kartini No. 41</h6>
-        <h6>Palu - Sulawesi Tengah, Indonesia</h6>
-        <p class="fw-bold pt-0">Haha Dev Collaboration &#169; 2021, Creative Ins.</p>
+        <h6>Kota Palu - Sulawesi Tengah, Indonesia</h6>
+      </div>
+      <div class="sosmed text-center">
+        <!-- IG Account -->
+        <span class="pe-md-4">
+          <img src="assets/img/1164349_circle_instagram_logo_media_network_icon.png" alt="instagram-logo" height="25vh" />
+          <a href="https://www.instagram.com/creative_inss/">@creative_inss</a>
+        </span>
+        <!-- end IG Account -->
+
+        <!-- Facbook/Fanpage Account -->
+        <span class="pe-md-4">
+          <img src="assets/img/5296499_fb_facebook_facebook logo_icon.png" alt="facebook-logo" height="25vh" />
+          <a href="https://www.facebook.com/Creative-Institute-102031534874716">Creative Institute</a>
+        </span>
+        <!-- end Facebook/Fanpage Account -->
+
+        <!-- WA Business -->
+        <span>
+          <img src="assets/img/3225179_app_logo_media_popular_social_icon.png" alt="whatsapp-logo" height="25vh" />
+          <a>0813-2909-9709</a>
+        </span>
+        <!-- end WA Business -->
       </div>
     </footer>
 
