--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                 <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Privacy Policy</a>
+                <a class="nav-link" href="#packet">E-Course</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#event">Webinar</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
@@ -48,12 +51,11 @@
       <!-- end Navbar -->
 
       <!-- Jumbotron  -->
-      <!-- style="background-image: url('assets/img/christina-wocintechchat-com-LQ1t-8Ms5PY-unsplash.jpg'); height: 100vh" -->
       <div class="jumbotron">
-        <img src="assets/img/campaign-creators-gMsnXqILjp4-unsplash.jpg" alt="talk" class="banner" />
+        <img src="assets/img/close-up-woman-class.jpg" alt="talk" class="banner" />
         <div class="mask d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.6); height: 100vh; width: 100%">
           <div class="content text-center text-white">
-            <img src="assets/img/Jumbotron_Logo.png" alt="logo" height="200vh" width="75%" />
+            <img src="assets/img/20210822_133345.png" alt="logo" height="200vh" width="65%" />
             <p>Merupakan Platform Penyedia Layanan E-Course</p>
           </div>
         </div>
@@ -64,7 +66,7 @@
     <!-- main -->
 
     <!-- Card Daftar Paket -->
-    <section class="py-5 mb-5">
+    <section class="py-5 mb-5" id="packet">
       <div class="container">
         <h3 class="text-center pt-5 pb-4">Paket Kelas</h3>
         <div class="row">
@@ -74,8 +76,8 @@
               <img src="assets/img/theme-photos-CGpifH3FjOA-unsplash.jpg" class="card-img-top" alt="paketA" />
               <div class="card-body">
                 <h5 class="card-title fw-bold">Graphic Design</h5>
-                <h6 class="card-title price">Rp. 100.000,00</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6 class="card-title price">Rp. 175.000,00</h6>
+                <p class="card-text">Belajar skill desain selama sebulan dengan 4 kali pertemuan via Zoom untuk Live Mentoring dan Whatsapp Grup sebagai media kelasnya</p>
                 <a href="#" class="btn btn-outline-warning btnPacket1" data-bs-toggle="modal" data-bs-target="#orderPacket">Pesan</a>
               </div>
             </div>
@@ -88,7 +90,7 @@
               <img src="assets/img/spartan-xozz-u4bvBOOpZB4-unsplash.jpg" class="card-img-top" alt="paketB" />
               <div class="card-body">
                 <h5 class="card-title fw-bold">Video Editing</h5>
-                <h6 class="card-title price">Rp. 100.000,00</h6>
+                <h6 class="card-title price">Comingsoon</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-outline-warning btnPacket2" data-bs-toggle="modal" data-bs-target="#orderPacket">Pesan</a>
               </div>
@@ -102,7 +104,7 @@
               <img src="assets/img/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg" class="card-img-top" alt="paketC" />
               <div class="card-body">
                 <h5 class="card-title fw-bold">Copywriting</h5>
-                <h6 class="card-title price">Rp. 100.000,00</h6>
+                <h6 class="card-title price">Comingsoon</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-outline-warning btnPacket3" data-bs-target="#orderPacket" data-bs-toggle="modal">Pesan</a>
               </div>
@@ -116,7 +118,7 @@
               <img src="assets/img/3719147.png" class="card-img-top" alt="paketD" />
               <div class="card-body">
                 <h5 class="card-title fw-bold">Microsoft Office</h5>
-                <h6 class="card-title price">Rp. 100.000,00</h6>
+                <h6 class="card-title price">Comingsoon</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-outline-warning btnPacket4" data-bs-toggle="modal" data-bs-target="#orderPacket">Pesan</a>
               </div>
@@ -155,22 +157,32 @@
       <div class="container">
         <h3 class="text-center">Mengapa Harus Menggunakan Layanan Creative Ins.</h3>
         <div class="row m-5">
-          <div class="col-md-4 mb-2">
-            <div class="benefit text-center p-3 rounded-3">
-              <h5>PENDAFTARAN YANG MUDAH DAN CEPAT</h5>
-              <p class="benefit-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum rerum totam tempore quia. Officiis ducimus repellat distinctio tempore nulla similique.</p>
+          <div class="col-md-3 mb-2">
+            <div class="benefit text-center p-3">
+              <img src="assets/img/6599590_course_e-learning_education_evaluation_exam_icon.png" alt="metode-belajar" height="100vh" class="pb-2" />
+              <h5>Metode Belajar Lebih Singkat</h5>
+              <p class="benefit-content">Metode belajarnya lebih singkat dibandingkan sekolah formal seperti Sekolah Kejuruan Multimedia/DKV yang butuh waktu belajar 3 tahun atau pelatihan kursus yang butuh waktu 6-8 bulan.</p>
             </div>
           </div>
-          <div class="col-md-4 mb-2">
-            <div class="benefit text-center p-3 rounded-3">
-              <h5>MENTOR YANG BERPENGALAMAN DAN RAMAH</h5>
-              <p class="benefit-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium, a incidunt. Laboriosam repudiandae officiis esse!</p>
+          <div class="col-md-3 mb-2">
+            <div class="benefit text-center p-3">
+              <img src="assets/img/6599585_course_e-learning_education_learning_teacher_icon.png" alt="mentor-berpengalaman" height="100vh" class="pb-2" />
+              <h5>Mentor Berpengalaman dan Ramah</h5>
+              <p class="benefit-content">Mentor yang berpengalaman, serta pelayanan yang ramah dari para mentor disetiap pertemuan.</p>
             </div>
           </div>
-          <div class="col-md-4 mb-2">
-            <div class="benefit text-center p-3 rounded-3">
-              <h5>KENYAMANAN DAN KEAMANAN ADALAH PRIORITAS KAMI</h5>
-              <p class="benefit-content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis vitae labore illum vel, cupiditate doloremque.</p>
+          <div class="col-md-3 mb-2">
+            <div class="benefit text-center p-3">
+              <img src="assets/img/6599588_e-book_e-learning_education_flexible_learning_icon.png" alt="lifetime-access" height="100vh" class="pb-2" />
+              <h5>Materi Dapat di Akses Selamanya</h5>
+              <p class="benefit-content">Cukup dengan sekali bayar dan bergabung dengan kursus yang ada maka materi kursus tersebut dapat di akses selamanya.</p>
+            </div>
+          </div>
+          <div class="col-md-3 mb-2">
+            <div class="benefit text-center p-3">
+              <img src="assets/img/6599582_certification_completion_diploma_e-learning_graduate_icon.png" alt="alumni-magang" height="100vh" class="pb-2" />
+              <h5>Berkesempatan Magang di CREATIVE INS</h5>
+              <p class="benefit-content">Para alumni e-course bisa magang di Creative Ins menjadi Content Creator.</p>
             </div>
           </div>
         </div>
@@ -179,7 +191,7 @@
     <!-- end Penjelasan Benefit -->
 
     <!-- Event -->
-    <section class="pt-2 pb-4 mb-2">
+    <section class="pt-2 pb-4 mb-2" id="event">
       <div class="container">
         <h3 class="text-center pt-5 pb-4">Events</h3>
         <div class="card mx-auto card-event">
@@ -211,25 +223,27 @@
     </section>
     <!-- end Event -->
 
-    <!-- Daftar Tim -->
+    <!-- Daftar Mentor -->
     <section class="py-5 my-5 bg-light">
       <div class="container">
-        <p class="text-center fw-bold fs-4">Daftar Tim</p>
-        <div class="row justify-content-sm-between">
-          <div class="col-sm-3 py-1 text-center">
+        <p class="text-center fw-bold fs-4">Tentang Mentor</p>
+        <div class="row justify-content-sm-center">
+          <div class="col-sm-6 py-3 px-5 text-center">
             <img src="assets/img/403022_business man_male_user_avatar_profile_icon.png" alt="org-1" class="border border-3 border-warning rounded-circle" height="100vh" />
-            <h5>Adam S.Psi</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ad.</p>
+            <h5>Wahyu Rohimat</h5>
+            <h6>Desainer Grafis Pixellab</h6>
+            <p style="text-align: justify">
+              Berasal dari Kota Garut yang saat ini masih berstatus seorang mahasiswa Jurusan PAI dan aktif menjadi Content Creator di akun pribadinya <a href="https://www.instagram.com/wahyu_rohimat/" class="linkSosmed">@wahyu_rohimat</a>
+            </p>
           </div>
-          <div class="col-sm-3 py-1 text-center">
+          <div class="col-sm-6 py-3 px-5 text-center">
             <img src="assets/img/403019_avatar_male_man_person_user_icon.png" alt="org-2" class="border border-3 border-warning rounded-circle" height="100vh" />
-            <h5>Michael S.Psi</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ad.</p>
-          </div>
-          <div class="col-sm-3 py-1 text-center">
-            <img src="assets/img/403023_avatar_user_woman_female_person_icon.png" alt="org-3" class="border border-3 border-warning rounded-circle" height="100vh" />
-            <h5>Melati S.Psi</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ad.</p>
+            <h5>Arsadi</h5>
+            <h6>Desainer Grafis Inkscape dan Affinity</h6>
+            <p style="text-align: justify">
+              Berasal dari Kota Palu yang saat ini masih berstatus seorang mahasiswa Jurusan Teknologi Informasi. Kesehariannya aktif menjadi Content Creator di
+              <a href="https://www.instagram.com/rsad.design/" class="linkSosmed">@rsad.design</a> dan Freelancer Design dan Programmer.
+            </p>
           </div>
         </div>
       </div>
@@ -252,12 +266,33 @@
 
     <footer>
       <div class="foot-title text-center">
-        <h5>Alamat Kantor</h5>
+        <h5>CREATIVE INS</h5>
       </div>
-      <div class="foot-body text-center">
+      <div class="foot-content text-center">
         <h6>Jl. Ra Kartini No. 41</h6>
-        <h6>Palu - Sulawesi Tengah, Indonesia</h6>
-        <p class="fw-bold pt-0">Haha Dev Collaboration &#169; 2021, Creative Ins.</p>
+        <h6>Kota Palu - Sulawesi Tengah, Indonesia</h6>
+      </div>
+      <div class="sosmed text-center">
+        <!-- IG Account -->
+        <span class="pe-md-4">
+          <img src="assets/img/1164349_circle_instagram_logo_media_network_icon.png" alt="instagram-logo" height="25vh" />
+          <a href="https://www.instagram.com/creative_inss/">@creative_inss</a>
+        </span>
+        <!-- end IG Account -->
+
+        <!-- Facbook/Fanpage Account -->
+        <span class="pe-md-4">
+          <img src="assets/img/5296499_fb_facebook_facebook logo_icon.png" alt="facebook-logo" height="25vh" />
+          <a href="https://www.facebook.com/Creative-Institute-102031534874716">Creative Institute</a>
+        </span>
+        <!-- end Facebook/Fanpage Account -->
+
+        <!-- WA Business -->
+        <span>
+          <img src="assets/img/3225179_app_logo_media_popular_social_icon.png" alt="whatsapp-logo" height="25vh" />
+          <a>0813-2909-9709</a>
+        </span>
+        <!-- end WA Business -->
       </div>
     </footer>
 
