revisi home page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="#event">Webinar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#custService">Contact</a>
               </li>
             </ul>
           </div>
@@ -52,7 +52,7 @@
 
       <!-- Jumbotron  -->
       <div class="jumbotron">
-        <img src="assets/img/close-up-woman-class.jpg" alt="talk" class="banner" />
+        <img src="assets/img/bench-accounting-C3V88BOoRoM-unsplash.jpg" alt="talk" class="banner" />
         <div class="mask d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.6); height: 100vh; width: 100%">
           <div class="content text-center text-white">
             <img src="assets/img/20210822_133345.png" alt="logo" height="200vh" width="65%" />
@@ -76,7 +76,10 @@
               <img src="assets/img/theme-photos-CGpifH3FjOA-unsplash.jpg" class="card-img-top" alt="paketA" />
               <div class="card-body">
                 <h5 class="card-title fw-bold">Graphic Design</h5>
-                <h6 class="card-title price">Rp. 175.000,00</h6>
+                <div class="price">
+                  <h6 class="card-title pe-2 harga">Rp. 175.000,00</h6>
+                  <h6 class="card-title text-decoration-line-through hrgCoret">Rp. 300.000,00</h6>
+                </div>
                 <p class="card-text">Belajar skill desain selama sebulan dengan 4 kali pertemuan via Zoom untuk Live Mentoring dan Whatsapp Grup sebagai media kelasnya</p>
                 <a href="#" class="btn btn-outline-warning btnPacket1" data-bs-toggle="modal" data-bs-target="#orderPacket">Pesan</a>
               </div>
@@ -90,7 +93,7 @@
               <img src="assets/img/spartan-xozz-u4bvBOOpZB4-unsplash.jpg" class="card-img-top" alt="paketB" />
               <div class="card-body">
                 <h5 class="card-title fw-bold">Video Editing</h5>
-                <h6 class="card-title price">Comingsoon</h6>
+                <h6 class="card-title harga">Comingsoon</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-outline-warning btnPacket2" data-bs-toggle="modal" data-bs-target="#orderPacket">Pesan</a>
               </div>
@@ -104,7 +107,7 @@
               <img src="assets/img/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg" class="card-img-top" alt="paketC" />
               <div class="card-body">
                 <h5 class="card-title fw-bold">Copywriting</h5>
-                <h6 class="card-title price">Comingsoon</h6>
+                <h6 class="card-title harga">Comingsoon</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-outline-warning btnPacket3" data-bs-target="#orderPacket" data-bs-toggle="modal">Pesan</a>
               </div>
@@ -118,7 +121,7 @@
               <img src="assets/img/3719147.png" class="card-img-top" alt="paketD" />
               <div class="card-body">
                 <h5 class="card-title fw-bold">Microsoft Office</h5>
-                <h6 class="card-title price">Comingsoon</h6>
+                <h6 class="card-title harga">Comingsoon</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-outline-warning btnPacket4" data-bs-toggle="modal" data-bs-target="#orderPacket">Pesan</a>
               </div>
@@ -230,19 +233,20 @@
         <div class="row justify-content-sm-center">
           <div class="col-sm-6 py-3 px-5 text-center">
             <img src="assets/img/403022_business man_male_user_avatar_profile_icon.png" alt="org-1" class="border border-3 border-warning rounded-circle" height="100vh" />
-            <h5>Wahyu Rohimat</h5>
+            <h5 class="fw-bold">Wahyu Rohimat</h5>
             <h6>Desainer Grafis Pixellab</h6>
-            <p style="text-align: justify">
-              Berasal dari Kota Garut yang saat ini masih berstatus seorang mahasiswa Jurusan PAI dan aktif menjadi Content Creator di akun pribadinya <a href="https://www.instagram.com/wahyu_rohimat/" class="linkSosmed">@wahyu_rohimat</a>
+            <p class="bioMentor">
+              Berasal dari Kota Garut yang saat ini masih berstatus seorang mahasiswa Jurusan PAI dan aktif menjadi Content Creator di akun pribadinya
+              <a href="https://www.instagram.com/wahyu_rohimat/" class="text-decoration-none text-reset">@wahyu_rohimat</a>
             </p>
           </div>
           <div class="col-sm-6 py-3 px-5 text-center">
             <img src="assets/img/403019_avatar_male_man_person_user_icon.png" alt="org-2" class="border border-3 border-warning rounded-circle" height="100vh" />
-            <h5>Arsadi</h5>
+            <h5 class="fw-bold">Arsadi</h5>
             <h6>Desainer Grafis Inkscape dan Affinity</h6>
-            <p style="text-align: justify">
+            <p class="bioMentor">
               Berasal dari Kota Palu yang saat ini masih berstatus seorang mahasiswa Jurusan Teknologi Informasi. Kesehariannya aktif menjadi Content Creator di
-              <a href="https://www.instagram.com/rsad.design/" class="linkSosmed">@rsad.design</a> dan Freelancer Design dan Programmer.
+              <a href="https://www.instagram.com/rsad.design/" class="text-decoration-none text-reset">@rsad.design</a> dan Freelancer Design dan Programmer.
             </p>
           </div>
         </div>
@@ -272,23 +276,23 @@
         <h6>Jl. Ra Kartini No. 41</h6>
         <h6>Kota Palu - Sulawesi Tengah, Indonesia</h6>
       </div>
-      <div class="sosmed text-center">
+      <div class="sosmed text-center" id="custService">
         <!-- IG Account -->
-        <span class="pe-md-4">
+        <span class="pe-md-4 igAccount">
           <img src="assets/img/1164349_circle_instagram_logo_media_network_icon.png" alt="instagram-logo" height="25vh" />
-          <a href="https://www.instagram.com/creative_inss/">@creative_inss</a>
+          <a href="https://www.instagram.com/creative_inss/" class="text-decoration-none text-white">@creative_inss</a>
         </span>
         <!-- end IG Account -->
 
         <!-- Facbook/Fanpage Account -->
-        <span class="pe-md-4">
+        <span class="pe-md-4 fbAccount">
           <img src="assets/img/5296499_fb_facebook_facebook logo_icon.png" alt="facebook-logo" height="25vh" />
-          <a href="https://www.facebook.com/Creative-Institute-102031534874716">Creative Institute</a>
+          <a href="https://www.facebook.com/Creative-Institute-102031534874716" class="text-decoration-none text-white">Creative Institute</a>
         </span>
         <!-- end Facebook/Fanpage Account -->
 
         <!-- WA Business -->
-        <span>
+        <span class="waAccount">
           <img src="assets/img/3225179_app_logo_media_popular_social_icon.png" alt="whatsapp-logo" height="25vh" />
           <a>0813-2909-9709</a>
         </span>
