Update Event dan Footer

--- a/about.html
+++ b/about.html
@@ -82,34 +82,36 @@
     </main>
 
     <footer>
-      <div class="foot-title text-center">
-        <h5>CREATIVE INS</h5>
-      </div>
-      <div class="foot-content text-center">
-        <h6>Jl. Ra Kartini No. 41</h6>
-        <h6>Kota Palu - Sulawesi Tengah, Indonesia</h6>
-      </div>
-      <div class="sosmed text-center">
-        <!-- IG Account -->
-        <span class="pe-md-4">
-          <img src="assets/img/1164349_circle_instagram_logo_media_network_icon.png" alt="instagram-logo" height="25vh" />
-          <a href="https://www.instagram.com/creative_inss/">@creative_inss</a>
-        </span>
-        <!-- end IG Account -->
+      <div class="container">
+        <div class="foot-title text-center">
+          <h5>CREATIVE INS</h5>
+        </div>
+        <div class="foot-content text-center">
+          <h6>Jl. Ra Kartini No. 41</h6>
+          <h6>Kota Palu - Sulawesi Tengah, Indonesia</h6>
+        </div>
+        <div class="sosmed text-center" id="custService">
+          <!-- IG Account -->
+          <span class="igAccount">
+            <img src="assets/img/1164349_circle_instagram_logo_media_network_icon.png" alt="instagram-logo" height="25vh" />
+            <a href="https://www.instagram.com/creative_inss/" class="text-decoration-none text-white">@creative_inss</a>
+          </span>
+          <!-- end IG Account -->
 
-        <!-- Facbook/Fanpage Account -->
-        <span class="pe-md-4">
-          <img src="assets/img/5296499_fb_facebook_facebook logo_icon.png" alt="facebook-logo" height="25vh" />
-          <a href="https://www.facebook.com/Creative-Institute-102031534874716">Creative Institute</a>
-        </span>
-        <!-- end Facebook/Fanpage Account -->
+          <!-- Facbook/Fanpage Account -->
+          <span class="fbAccount">
+            <img src="assets/img/5296499_fb_facebook_facebook logo_icon.png" alt="facebook-logo" height="25vh" />
+            <a href="https://www.facebook.com/Creative-Institute-102031534874716" class="text-decoration-none text-white">Creative Institute</a>
+          </span>
+          <!-- end Facebook/Fanpage Account -->
 
-        <!-- WA Business -->
-        <span>
-          <img src="assets/img/3225179_app_logo_media_popular_social_icon.png" alt="whatsapp-logo" height="25vh" />
-          <a>0813-2909-9709</a>
-        </span>
-        <!-- end WA Business -->
+          <!-- WA Business -->
+          <span class="waAccount">
+            <img src="assets/img/3225179_app_logo_media_popular_social_icon.png" alt="whatsapp-logo" height="25vh" />
+            <a>0813-2909-9709</a>
+          </span>
+          <!-- end WA Business -->
+        </div>
       </div>
     </footer>
 
