--- a/index.html
+++ b/index.html
@@ -113,34 +113,16 @@
     <!-- end Penjelasan Benefit -->
 
     <!-- Event -->
-    <section class="pt-2 pb-4 mb-2" id="event">
-      <div class="container">
-        <h3 class="text-center pt-5 pb-4">Events</h3>
-        <div class="card mx-auto card-event">
-          <div class="card-body">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="assets/img/workshop-battle-app-graphic-designer.jpg" class="d-block w-100" alt="..." />
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/img/webinar-bersama-fardiyandi.jpg" class="d-block w-100" alt="..." />
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/img/webinar-muslimah-skill-up.jpg" class="d-block w-100" alt="..." />
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-          </div>
-        </div>
+    <section class="py-5 mb-2" id="event">
+      <div class="container text-center">
+        <h1 class="fw-bold">Satu Inspirasi</h1>
+        <h2>Tidak Datang Dua Kali</h2>
+        <p class="pb-4">
+          Barangkali kegelisahanmu akan terjawab di sini secara perlahan. <br />
+          sebab pintu ruang inspirasi pun terbuka untuk kamu. <br />
+          bukan hanya sekedar kebetulan semata.
+        </p>
+        <a href="https://www.instagram.com/creative_inss/" class="border rounded-pill text-decoration-none text-white py-3 px-5">Info Webinar Creative Ins.</a>
       </div>
     </section>
     <!-- end Event -->
@@ -149,7 +131,7 @@
     <section class="py-5 my-5 bg-light">
       <div class="container">
         <p class="text-center fw-bold fs-4">Tentang Mentor</p>
-        <div class="row justify-content-sm-center">
+        <div class="row">
           <div class="col-sm-6 py-3 px-5 text-center">
             <img src="assets/img/403022_business man_male_user_avatar_profile_icon.png" alt="org-1" class="border border-3 border-warning rounded-circle" height="100vh" />
             <h5 class="fw-bold">Wahyu Rohimat</h5>
@@ -188,34 +170,36 @@
     <!-- end main -->
 
     <footer>
-      <div class="foot-title text-center">
-        <h5>CREATIVE INS</h5>
-      </div>
-      <div class="foot-content text-center">
-        <h6>Jl. Ra Kartini No. 41</h6>
-        <h6>Kota Palu - Sulawesi Tengah, Indonesia</h6>
-      </div>
-      <div class="sosmed text-center" id="custService">
-        <!-- IG Account -->
-        <span class="pe-md-4 igAccount">
-          <img src="assets/img/1164349_circle_instagram_logo_media_network_icon.png" alt="instagram-logo" height="25vh" />
-          <a href="https://www.instagram.com/creative_inss/" class="text-decoration-none text-white">@creative_inss</a>
-        </span>
-        <!-- end IG Account -->
+      <div class="container">
+        <div class="foot-title text-center">
+          <h5>CREATIVE INS</h5>
+        </div>
+        <div class="foot-content text-center">
+          <h6>Jl. Ra Kartini No. 41</h6>
+          <h6>Kota Palu - Sulawesi Tengah, Indonesia</h6>
+        </div>
+        <div class="sosmed text-center" id="custService">
+          <!-- IG Account -->
+          <span class="igAccount">
+            <img src="assets/img/1164349_circle_instagram_logo_media_network_icon.png" alt="instagram-logo" height="25vh" />
+            <a href="https://www.instagram.com/creative_inss/" class="text-decoration-none text-white">@creative_inss</a>
+          </span>
+          <!-- end IG Account -->
 
-        <!-- Facbook/Fanpage Account -->
-        <span class="pe-md-4 fbAccount">
-          <img src="assets/img/5296499_fb_facebook_facebook logo_icon.png" alt="facebook-logo" height="25vh" />
-          <a href="https://www.facebook.com/Creative-Institute-102031534874716" class="text-decoration-none text-white">Creative Institute</a>
-        </span>
-        <!-- end Facebook/Fanpage Account -->
+          <!-- Facbook/Fanpage Account -->
+          <span class="fbAccount">
+            <img src="assets/img/5296499_fb_facebook_facebook logo_icon.png" alt="facebook-logo" height="25vh" />
+            <a href="https://www.facebook.com/Creative-Institute-102031534874716" class="text-decoration-none text-white">Creative Institute</a>
+          </span>
+          <!-- end Facebook/Fanpage Account -->
 
-        <!-- WA Business -->
-        <span class="waAccount">
-          <img src="assets/img/3225179_app_logo_media_popular_social_icon.png" alt="whatsapp-logo" height="25vh" />
-          <a>0813-2909-9709</a>
-        </span>
-        <!-- end WA Business -->
+          <!-- WA Business -->
+          <span class="waAccount">
+            <img src="assets/img/3225179_app_logo_media_popular_social_icon.png" alt="whatsapp-logo" height="25vh" />
+            <a>0813-2909-9709</a>
+          </span>
+          <!-- end WA Business -->
+        </div>
       </div>
     </footer>
 
