update event section dan mentor picture

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!-- Jumbotron  -->
       <div class="jumbotron">
         <img src="assets/img/bench-accounting-C3V88BOoRoM-unsplash.jpg" alt="talk" class="banner" />
-        <div class="mask d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.6); height: 100vh; width: 100%">
+        <div class="mask d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.5); height: 100vh; width: 100%">
           <div class="content text-center text-white">
             <img src="assets/img/20210822_133345.png" alt="logo" height="200vh" width="65%" />
             <p>Merupakan Platform Penyedia Layanan E-Course</p>
@@ -115,14 +115,12 @@
     <!-- Event -->
     <section class="py-5 mb-2" id="event">
       <div class="container text-center">
-        <h1 class="fw-bold">Satu Inspirasi</h1>
-        <h2>Tidak Datang Dua Kali</h2>
-        <p class="pb-4">
-          Barangkali kegelisahanmu akan terjawab di sini secara perlahan. <br />
-          sebab pintu ruang inspirasi pun terbuka untuk kamu. <br />
-          bukan hanya sekedar kebetulan semata.
-        </p>
-        <a href="https://www.instagram.com/creative_inss/" class="border rounded-pill text-decoration-none text-white py-3 px-5">Info Webinar Creative Ins.</a>
+        <h1 class="fw-bold">Create Your Skill</h1>
+        <h4 class="pt-3 pb-5">
+          Mau menambah pengetahuanmu seputar skill masa kini?<br />
+          Bisa jadi akan terjawab, disini.
+        </h4>
+        <a href="https://www.instagram.com/creative_inss/" class="border rounded-pill text-decoration-none text-white py-3 px-5">Selengkapnya</a>
       </div>
     </section>
     <!-- end Event -->
@@ -133,7 +131,7 @@
         <p class="text-center fw-bold fs-4">Tentang Mentor</p>
         <div class="row">
           <div class="col-sm-6 py-3 px-5 text-center">
-            <img src="assets/img/403022_business man_male_user_avatar_profile_icon.png" alt="org-1" class="border border-3 border-warning rounded-circle" height="100vh" />
+            <img src="assets/img/20210825_200136.png" alt="org-1" class="border border-3 border-warning rounded-circle" height="100vh" />
             <h5 class="fw-bold">Wahyu Rohimat</h5>
             <h6>Desainer Grafis Pixellab</h6>
             <p class="bioMentor">
@@ -142,7 +140,7 @@
             </p>
           </div>
           <div class="col-sm-6 py-3 px-5 text-center">
-            <img src="assets/img/403019_avatar_male_man_person_user_icon.png" alt="org-2" class="border border-3 border-warning rounded-circle" height="100vh" />
+            <img src="assets/img/20210825_200600.png" alt="org-2" class="border border-3 border-warning rounded-circle" height="100vh" />
             <h5 class="fw-bold">Arsadi</h5>
             <h6>Desainer Grafis Inkscape dan Affinity</h6>
             <p class="bioMentor">
