update padding dan margin

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <!-- end Penjelasan Benefit -->
 
     <!-- Event -->
-    <section class="py-5 mb-2" id="event">
+    <section class="py-5" id="event">
       <div class="container text-center">
         <h1 class="fw-bold">Create Your Skill</h1>
         <h4 class="pt-3 pb-5">
@@ -126,7 +126,7 @@
     <!-- end Event -->
 
     <!-- Daftar Mentor -->
-    <section class="py-5 my-5 bg-light">
+    <section class="py-5 bg-light">
       <div class="container">
         <p class="text-center fw-bold fs-4">Tentang Mentor</p>
         <div class="row">
@@ -156,7 +156,7 @@
     <!-- Support By -->
     <section class="pb-5 bg-white">
       <div class="container mx-auto px-4">
-        <p class="text-center fw-bold">Support By</p>
+        <p class="text-center fw-bold pt-5">Support By</p>
         <div class="text-center my-6">
           <img src="assets/img/dinas-perindag-sulteng.49ecb721.png" alt="disperindag" />
           <img src="assets/img/mtc.74418659.png" alt="ibti_mtc" />
