update support by position

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <div class="container mx-auto px-4">
         <p class="text-center fw-bold pt-5">Support By</p>
         <div class="text-center my-6">
-          <img src="assets/img/dinas-perindag-sulteng.49ecb721.png" alt="disperindag" />
+          <img src="assets/img/dinas-perindag-sulteng.49ecb721.png" alt="disperindag" height="100vh" />
           <img src="assets/img/mtc.74418659.png" alt="ibti_mtc" />
         </div>
       </div>
