--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       <!-- Jumbotron  -->
       <div class="jumbotron">
         <img src="assets/img/bench-accounting-C3V88BOoRoM-unsplash.jpg" alt="talk" class="banner" />
-        <div class="mask d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.5); height: 75vh; width: 100%">
+        <div class="mask d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.5); height: 500px; width: 100%">
           <div class="content text-center text-white">
-            <img src="assets/img/20210822_133345.png" alt="logo" height="200vh" width="65%" />
+            <img src="assets/img/20210822_133345.png" alt="logo" height="200vh" />
             <p>Merupakan Platform Penyedia Layanan E-Course</p>
           </div>
         </div>
@@ -158,7 +158,7 @@
       <div class="container mx-auto px-4">
         <p class="text-center fw-bold pt-5">Support By</p>
         <div class="text-center my-6">
-          <img src="assets/img/dinas-perindag-sulteng.49ecb721.png" alt="disperindag" height="100vh" />
+          <img src="assets/img/disperindag-logo.png" alt="disperindag" height="100vh" />
           <img src="assets/img/mtc.74418659.png" alt="ibti_mtc" />
         </div>
       </div>
