--- a/about.html
+++ b/about.html
@@ -57,18 +57,17 @@
         </div>
         <div class="contentProfil pb-3">
           <p>
-            Creative Ins adalah Tempat Kursus secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office).<br />
-            Tujuan didirikan agar mencetak lulusan yang :
+            Creative Ins merupakan sebuah Tempat Kursus yang dilakukan secara Online dalam skill bidang Multimedia/Desain Komunikasi Visual dan Administrasi Perkantoran (Ms. Office).<br /><br>
+            <strong>Tujuan didirikan agar mencetak lulusan yang :</strong>
+            <ol>
+              <li>memiliki keahlian Desain Grafis/Editor Video/Copywriter/Administrasi Perkantoran</li>
+              <li>memiliki kreatifitas dan kualitas</li>
+              <li>mampu memanfaatkan teknologi untuk berkembang</li>
+              <li>alumninya bisa berpenghasilan sendiri sebagai freelancer atau buka jasa sesuai keahliannya.</li>
+            </ol>
           </p>
-          <ul style="list-style-type: circle">
-            <li>memiliki keahlian Desain Grafis/Editor Video/Copywriter/Administrasi Perkantoran</li>
-            <li>memiliki kreatifitas dan kualitas</li>
-            <li>mampu memanfaatkan teknologi untuk berkembang</li>
-            <li>alumninya bisa berpenghasilan sendiri sebagai freelancer atau buka jasa sesuai keahliannya.</li>
-          </ul>
           <p>
-            Creative Ins didirikan oleh Anjani Abbas (Founder Creative Ins) dan Nur Aisyah (Co-Founder) yang pernah mengenyam pendidikan di Teknologi Informasi UNTAD Palu dan berjuang bersama tim militan yang siap tempur dari medan perang
-            masing-masing, Farachatus Salwa (Bali), Princessa Arima (Malang), Octavia (Bengkulu), dan UnName (Palu). <br />
+            Creative Ins didirikan oleh Anjani Abbas sebagai Founder Creative Ins dan Nur Aisyah sebagai Co-Founder Creative Ins yang pernah mengenyam pendidikan di Teknologi Informasi UNTAD Palu dan berjuang bersama tim militan yang siap tempur dari medan perang masing-masing, Farachatus Salwa dari Bali, Princessa Arima dari Malang, Octavia dari Bengkulu, serta UnName dari Palu. <br>
           </p>
           <div class="quote text-center fw-bold py-4 my-3">
             <p>" Yang terpenting bukanlah siapanya atau privillage-nya, yang terpenting adalah kebersamaan buat perubahan lewat keahlian " <br />- Tim Creative Ins -</p>
